# DomainReviewer

./: .gitignore  README.md  build_exe.py  create_icon.py  domain_reviewer.spec  gui_main.py  gui_main_with_tray.py  main.py  pyproject.toml  requirements.txt
